FIXED THE GAP!!!!

--- a/tuc_poc.css
+++ b/tuc_poc.css
@@ -123,7 +123,6 @@ img.portait{
 /* Recipe section selection */
 
 .section_selection {
-  display:block;
   margin: 0;
   width: 100%;
 }
@@ -131,14 +130,13 @@ img.portait{
 .container {
   padding:0;
   float: left;
-  display: block;
   position: relative;
   margin: 0;
   width: 25%;
-  height: auto;
 }
 
 .container img {
+  display:block;
   width: 100%;
   height: 100%;
 }
